--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=${PORT:8080}
 # ============================================================================
 spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/hirelink_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true}
 spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:password}
+spring.datasource.password=${DATABASE_PASSWORD:Talipot@123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection Pool (HikariCP)
