feat: Implement user verification, search, location features, and UI improvements
TASK 1: User Verification System - Add Email OTP verification, Google OAuth login, OtpVerification entity, EmailService/SmsService

TASK 2: Light Theme - Update Tailwind config, add accent colors, improve component styles

TASK 3: Search - Add SearchBar, SearchResults page, search API, expandable header search

TASK 4: Location Features - Add LocationService, LocationPicker, NearbyProvidersPanel, geocoding integration

BUG FIX 1: Header Display - CSS reset, sticky-header class, iOS fixes, mobile meta tags

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.port=${PORT:8080}
 # Database Configuration
 # ============================================================================
 spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/hirelink_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:Talipot@123}
+spring.datasource.username=${DATABASE_USERNAME:hirelink}
+spring.datasource.password=${DATABASE_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection Pool (HikariCP)
@@ -72,3 +72,21 @@ management.endpoint.health.show-details=when-authorized
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
+
+# ============================================================================
+# Email Configuration (Gmail SMTP)
+# ============================================================================
+# For Gmail, you need to:
+# 1. Enable 2-Step Verification on your Google Account
+# 2. Generate an App Password (Google Account > Security > App Passwords)
+# 3. Use that 16-character password as MAIL_PASSWORD
+# ============================================================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME:learning@ensate.in}
+spring.mail.password=${MAIL_PASSWORD:jvilgsblttlcgege}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
